[package]
name = "snips-nlu-utils"
version = "0.7.1"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
itertools = "0.8"
lazy_static = "1.2"
regex = "1.1"
unicode-normalization = "0.1.5"
serde = { version = "1", features = ["derive"] }
failure = "0.1"
fnv = "1"
rmp-serde = "0.13"

[dev-dependencies]
tempfile = "3.0"
