[package]
name = "snips-nlu-utils"
version = "0.9.0"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[workspace]
members = [
    "python/ffi"
]

[dependencies]
itertools = "0.8"
lazy_static = "1.2"
libc = "0.2"
regex = "1.1"
unicode-normalization = "0.1.5"
failure = "0.1"
fnv = "1.0"
