[package]
name = "ffi"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
snips-nlu-utils = { path = ".." }
libc = "0.2"
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
