[package]
name = "snips-nlu-utils-ffi-macros"
version = "0.1.0"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
snips-nlu-utils = { path = "../.." }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
