[package]
name = "snips-nlu-utils-py"
version = "0.6.1"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]

[lib]
name = "_snips_nlu_utils_py"
crate-type = ["cdylib"]

[dependencies]
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.1" }
cpython = { version="0.1", default-features=false }
